--- a/src/index.css
+++ b/src/index.css
@@ -20,15 +20,14 @@ code {
 .main{
   width: 25%;
   margin: 2rem auto;
-  padding: 2rem 3rem;
+  padding: 2rem;
+  max-width:90%;
   background-color: #fff;
   border-radius: 30px ;
 
 }
 
-.main-modal{
-  
-}
+
 img{
   height : auto;
   width: 110px;
@@ -42,9 +41,6 @@ img{
   border: 1px solid black;
 }
 
-.Mui-checked{
-  
-}
 .text-area{
 
   margin-bottom: 1rem;
