--- a/src/index.css
+++ b/src/index.css
@@ -39,15 +39,18 @@ img{
 .css-vqmohf-MuiButtonBase-root-MuiRadio-root {
   opacity: 0;
   display: none;
+  visibility: hidden;
   /* transform: translateX(70px); */
   /* z-index: -2; */
 }
-.css-vqmohf-MuiButtonBase-root-MuiRadio-root.Mui-checked + .poke-image{
-  border: 1px solid black;
-}
+
 
 .css-j204z7-MuiFormControlLabel-root{
   margin-left: -30px !important;
+  margin-right: 0 !important;
+}
+.input{
+  display: none;
 }
 
 
